--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
